# atmel-swi-analyzer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
ci/linux/: Dockerfile  build.sh  docker-build.sh  docker-run.sh  readme.md
src/: AtmelSWIAnalyzer.cpp  AtmelSWIAnalyzer.h  AtmelSWIAnalyzerResults.cpp  AtmelSWIAnalyzerResults.h  AtmelSWIAnalyzerSettings.cpp  AtmelSWIAnalyzerSettings.h  AtmelSWISimulationDataGenerator.cpp  AtmelSWISimulationDataGenerator.h  AtmelSWITypes.cpp  AtmelSWITypes.h
